Removed JSON.parse

--- a/packages/grape-web-client/demo/iframe.html
+++ b/packages/grape-web-client/demo/iframe.html
@@ -19,6 +19,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://db2fe37f28fa.ngrok.io/chat/" id="grape-client" />
+  <iframe src="https://740291d10a17.eu.ngrok.io/chat" id="grape-client" />
 </body>
 </html>
