Replaced staticBaseUrl with unpkg link

--- a/packages/grape-web-client/demo/embedded.html
+++ b/packages/grape-web-client/demo/embedded.html
@@ -27,7 +27,7 @@
       //channelId: 2253,
       orgId: 1,
       serviceUrl: 'https://uebergrape.staging.chatgrape.com',
-      staticBaseUrl: 'http://localhost:8081/dist/',
+      staticBaseUrl: 'https://unpkg.com/grape-web-client/dist/',
       // staticBaseUrl: 'http://10.0.2.2:8081/static/',
       onReady: function() {
         console.log('Grape Client initialized')
