iframe example with notification handling

--- a/packages/grape-web-client/demo/iframe.html
+++ b/packages/grape-web-client/demo/iframe.html
@@ -18,7 +18,127 @@
     }
   </style>
 </head>
+
 <body>
-  <iframe src="https://740291d10a17.eu.ngrok.io/chat" id="grape-client" />
+  <script>
+    console.log("iframed web client");
+
+    /**
+     * Code to ask for Notification permissions. Only trigger this from a user
+     * interaction, e.g. click of a button.
+     */
+    activateNotifications = () => {
+      // Let's check if the browser supports notifications
+      if (!("Notification" in window)) {
+        alert("Desktop notifications not suported!")
+      }
+      // Let's check whether notification permissions have already been granted
+      else if (Notification.permission === "granted") {
+        alert("Notification permission already GRANTED.")
+      }
+      else if (Notification.permission === "denied") {
+        alert("Notification permission already DENIED.")
+      }
+      // Otherwise, we need to ask the user for permission
+      else {
+        Notification.requestPermission().then(function (permission) {
+          // If the user accepts, let's create a notification
+          if (permission === "granted") {
+            alert("Notification permission granted. Thanks!")
+          }
+        });
+      } 
+    }
+
+    /**
+     * Create a notification from Grape data
+     */
+    createNotification = (...args) => {
+      console.log("createNotification", args)
+      if (!window.Notification) return null
+
+      let properties
+      let callbacks
+      let params
+
+      // Handling of changing API for createNotification function, but old desktop clients should also be supported.
+      // Please remove within some time.
+      if (args[1]) {
+        // Handling notifications for old desktop client (grape-electron < 3.0.0)
+        ;[properties, callbacks, params] = args
+      } else {
+        // Handling notifications for new desktop client (grape-electron >= 3.0.0)
+        // eslint-disable-next-line prefer-destructuring
+        ;({ properties, params, callbacks } = args[0])
+      }
+
+      const notification = new Notification(properties.title, {
+        body: properties.content,
+        silent: true,
+        ...properties,
+      })
+
+      if (properties.requireInteraction) {
+        setTimeout(() => {
+          notification.close()
+        }, params.timeout || 3000)
+      }
+
+      if (callbacks.onClick) {
+        notification.onclick = e => {
+          callbacks.onClick(e, notification)
+          notification.close()
+          window.focus()
+          if (window.grapeAppBridge && window.grapeAppBridge.showMainWindow)
+            window.grapeAppBridge.showMainWindow()
+        }
+      }
+
+      if (callbacks.onClose) {
+        notification.onclose = e => {
+          callbacks.onClose(e, notification)
+        }
+      }
+
+      return notification
+    }
+
+    /**
+     * Update existing Grape notification
+     */
+    updateNotification = ({ type }, props, nextProps) => {
+      console.log("createNotification", type, props, nextProps)
+      const { incomingCall, notification } = nextProps
+
+      if (type === 'calls') {
+        const { show } = incomingCall
+        if (!show && show !== props.incomingCall.show && notification.close) {
+          notification.close()
+        }
+      }
+    }
+
+    /**
+     * Incoming notification events from the iframe
+     */
+    window.addEventListener("message", (event) => {
+      console.log(event)
+      data = JSON.parse(event.data)
+
+      switch (data.type) {
+        case 'grapeClient.createNotification':
+          const { args: { properties, callbacks, params }} = data.payload;
+          createNotification({ properties, callbacks, params });
+        case 'grapeClient.updateNotification':
+          const { type, props, nextProps } = data.payload;
+          updateNotification({ type }, this.props, nextProps);
+        default:
+          break;
+      };
+    })
+
+  </script>
+  <button onclick="activateNotifications()">Activate Notifications</button>
+  <iframe src="https://uebergrape.staging.chatgrape.com/chat/" id="grape-client" />
 </body>
 </html>
